<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.fl</groupId>
	<artifactId>collection-music</artifactId>
	<version>9.1.0</version>

	<dependencies>
		<dependency>
			<groupId>org.fl</groupId>
			<artifactId>FlUtils</artifactId>
			<version>9.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.fl</groupId>
  			<artifactId>discogsInterface</artifactId>
  			<version>0.2.4</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.12.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
    		<groupId>org.junit.jupiter</groupId>
    		<artifactId>junit-jupiter-params</artifactId>
    		<version>5.12.2</version>
    		<scope>test</scope>
		</dependency>
		<dependency>
        	<groupId>org.assertj</groupId>
        	<artifactId>assertj-core</artifactId>
        	<version>3.27.3</version>
        	<scope>test</scope>
      	</dependency>
	</dependencies>

	<properties>
		<maven.compiler.release>21</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss z</maven.build.timestamp.format>
		<project.deploy.target>C:\FredericPersonnel\Loisirs\musique\RapportCollection</project.deploy.target>
		<installExe.skip>true</installExe.skip>
	</properties>

	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archive>
						<manifestEntries>
							<Class-Path>.</Class-Path>
						</manifestEntries>
						<manifest>
							<mainClass>
								org.fl.collectionAlbum.gui.CollectionAlbumGui
							</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
			<plugin>
                <groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
                <version>9.0.1</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>revision</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                    	<dateFormat>yyyy-MM-dd HH:mm:ss Z</dateFormat>
                        <skipPoms>false</skipPoms>
                        <commitIdGenerationMode>flat</commitIdGenerationMode>
                        <injectAllReactorProjects>true</injectAllReactorProjects>
                    </configuration>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>copy-css</id>
						<phase>install</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>

						<configuration>
							<skip>${installExe.skip}</skip>
							<outputDirectory>${project.deploy.target}/css</outputDirectory>
							<resources>
								<resource>
									<directory>src/main/resources/css</directory>
								</resource>
								<resource>
									<directory>src/main/resources/cssForGui</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>